# chardet-rust

./: CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  RUST_CONVERSION.md  RUST_TEST_RUNNER.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RUST_CODE_DOCUMENTATION.md  changelog.rst  how-it-works.rst  index.rst  pipeline_infographic.py  rust_architecture.mmd  rust_pipeline.mmd  rust_sequence.mmd
rust/: Cargo.toml  pyproject.toml
rust/chardet_rs/: __init__.py
rust/src/: bigram_models.rs  detector.rs  enums.rs  equivalences.rs  equivalences_full.rs  lib.rs  models.rs  py.rs  registry.rs
rust/src/pipeline/: ascii.rs  binary.rs  bom.rs  confusion.rs  escape.rs  markup.rs  mod.rs  orchestrator.rs  statistical.rs  structural.rs  utf1632.rs  utf8.rs  validity.rs
rust/tests/: test_accuracy.rs  test_api.rs  test_bom.rs
scripts/: parity_report.py  train.py
src/chardet/: __init__.py  enums.py  equivalences.py
src/chardet_rs/: __init__.py
tests/: known_accuracy_failures.txt  test_99_percent_coverage.py  test_accuracy.py  test_final_coverage.py  test_github_issues.py  test_logging_coverage.py  test_rust_bindings.py
