[project]
name = "chardet-rust"
version = "0.1.3"
description = "Universal character encoding detector"
license = "LGPL-2.1-or-later"
readme = "README.md"
keywords = ["encoding", "charset", "detection", "unicode", "chardet"]
requires-python = ">=3.10"
authors = [{ name = "Dan Blanchard", email = "dan.blanchard@gmail.com" }]
maintainers = [
  { name = "Dan Blanchard", email = "dan.blanchard@gmail.com" },
  { name = "Ian Cordasco" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/zopyx/chardet-rust"
Repository = "https://github.com/zopyx/chardet-rust"
"Bug Tracker" = "https://github.com/zopyx/chardet-rust/issues"
Documentation = "https://chardet.readthedocs.io"
Changelog = "https://chardet.readthedocs.io/en/latest/changelog.html"

[project.scripts]
chardetect = "chardet.cli:main"

[build-system]
requires = ["setuptools>=61", "setuptools-rust>=1.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-rust]
# Build the Rust extension from the rust/ directory
# The extension will be available as chardet_rs._chardet_rs

[[tool.setuptools-rust.ext-modules]]
# The Rust target name (from Cargo.toml [lib] name = "_chardet_rs")
# This will create the extension at chardet_rs._chardet_rs
target = "_chardet_rs"
# Path to Cargo.toml
path = "rust/Cargo.toml"
# PyO3 binding (default)
binding = "PyO3"


[tool.pytest]
testpaths = ["tests", "scripts/tests"]
pythonpath = ["scripts"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-m",
    "not benchmark",
]
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
    "serial: marks tests that must not run concurrently with others",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "E501",
    # Incompatible pairs
    "D203",   # incompatible with D211
    "D213",   # incompatible with D212
    # Formatter conflict
    "COM812", # trailing comma (ruff formatter handles this)
    # Encoding-detection code characteristics
    "PLR2004", # magic value comparison (byte values/thresholds)
    "C901",    # complex structure
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PERF203", # try-except in loop
    "TC001",   # TYPE_CHECKING guards add complexity for negligible import savings
    "TC002",   # (same rationale)
    "TC003",   # (same rationale)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # assert is standard in tests
    "S603",    # subprocess security not relevant in tests
    "S607",    # subprocess security not relevant in tests
    "PLW1510", # subprocess.run check not needed in tests
    "T201",    # print is fine in tests
    "PT011",   # pytest.raises broad match acceptable
    "PLC0415", # conditional imports sometimes needed
    "PERF401", # manual list comprehension (readability)
    "SLF001",  # private member access (whitebox testing of internals)
    "ARG001",  # unused function arguments (pytest fixtures)
    "RUF001",  # ambiguous unicode (intentional in encoding detection tests)
    # Docstrings and return types not required in tests
    "D100", "D101", "D102", "D103", "D104", "D107",
    "ANN201", "ANN202",
]
"scripts/tests/**" = [
    "S101",    # assert is standard in tests
    "PT011",   # pytest.raises broad match acceptable
    "INP001",  # not a package
    # Docstrings and return types not required in tests
    "D100", "D101", "D102", "D103", "D104", "D107",
    "ANN201", "ANN202",
]
"scripts/**" = [
    "T201",    # print is the output mechanism
    "INP001",  # not a package
    "ERA001",  # commented code provides training context
    "EXE001",  # shebang is intentional
    "BLE001",  # blind except (training resilience)
    "PLW2901", # redefined loop variable
    "ARG005",  # unused lambda args (signal handlers)
    "PTH",     # os.path usage fine in scripts
    "RUF003",  # ambiguous unicode (intentional in encoding training)
    "S603",    # subprocess security not relevant
    "S607",    # subprocess security not relevant
    "PLC0415", # conditional imports
    "RUF046",  # unnecessary int cast
    "TRY300",  # try-consider-else style
    "PLR0915", # too many statements
    "FURB122", # f.write in loop (binary packing)
    # Docstrings and return types not required in scripts
    "D100", "D101", "D102", "D103", "D104", "D107",
    "ANN201", "ANN202",
]
"src/chardet/__init__.py" = [
    "FBT001",  # bool params match chardet 6.x public API for backward compat
    "FBT002",  # bool param defaults match chardet 6.x public API
]
"src/chardet/_utils.py" = [
    "FBT001",  # bool params match chardet 6.x public API for backward compat
]
"src/chardet/detector.py" = [
    "FBT001",  # bool params match chardet 6.x public API for backward compat
    "FBT002",  # bool param defaults match chardet 6.x public API
]
"src/chardet/cli.py" = [
    "T201",    # CLI prints output to stdout
]
"docs/conf.py" = [
    "INP001",  # not a package
    "A001",    # copyright shadows builtin
]
# mypyc-compiled modules cannot use `from __future__ import annotations`
"src/chardet/models/__init__.py" = ["FA100"]
"src/chardet/pipeline/structural.py" = ["FA100"]
"src/chardet/pipeline/validity.py" = ["FA100"]
"src/chardet/pipeline/statistical.py" = ["FA100"]
"src/chardet/pipeline/utf1632.py" = ["FA100"]
"src/chardet/pipeline/utf8.py" = ["FA100"]
"src/chardet/pipeline/escape.py" = ["FA100"]


[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src/chardet"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_*"
build-frontend = "build[uv]"
test-command = "python -c \"import chardet; print(chardet.detect(b'hello world'))\""

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[dependency-groups]
dev = [
    "datasets>=4.6.0",
    "prek>=0.3.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.15.2",
]
docs = [
    "sphinx>=8.0",
    "furo>=2024.1.29",
    "sphinx-copybutton>=0.5.2",
]
