[package]
name = "chardet-rs"
version = "0.1.8"
edition = "2021"
authors = ["Dan Blanchard <dan.blanchard@gmail.com>"]
license = "LGPL-2.1-or-later"
description = "Universal character encoding detector - Rust implementation with Python bindings"
repository = "https://github.com/zopyx/chardet-rust"

[lib]
name = "_chardet_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
once_cell = "1.19"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
