[package]
name = "chardet-rs"
version = "0.1.9"
edition = "2021"
authors = ["Dan Blanchard <dan.blanchard@gmail.com>"]
license = "LGPL-2.1-or-later"
description = "Universal character encoding detector - Rust implementation with Python bindings"
repository = "https://github.com/zopyx/chardet-rust"

[lib]
name = "_chardet_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", optional = true, features = ["extension-module", "abi3-py310"] }
once_cell = "1.19"
encoding_rs = "0.8"

[dev-dependencies]
rayon = "1.10"

[features]
default = ["python"]
python = ["pyo3", "pyo3/extension-module"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[test]]
name = "test_accury"
path = "tests/test_accuracy.rs"
