[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "chardet-rs"
version = "0.1.9"
description = "Universal character encoding detector - Rust implementation"
# readme = "README.md"
license = {text = "LGPL-2.1-or-later"}
requires-python = ">=3.10"
maintainers = [{ name = "Andreas Jung", email = "info@zopyx.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

[tool.maturin]
python-source = "."
module-name = "chardet_rs._chardet_rs"
features = ["pyo3/extension-module"]
